# fcamanager-frontend

./: .env  .gitignore  .taurirc  BACKEND_SETUP.md  BUILD_INSTALLER_GUIDE.md  SISTEMA_LOGS.md  TAURI-SETUP.md  UPDATER_SETUP.md  UPDATE_SYSTEM_CONFIG.md  index.html  package-lock.json  package.json  prompt.txt  tailwind.config.js
.github/workflows/: build-and-release.yml
public/: index.html
public/fonts/: .gitkeep
src/: App.tsx  fonts.css  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/api/: listclans.ts  listusers.ts
src/components/: RecentActivities.tsx  atividadespendentes.tsx  atividadesrecentes.tsx  execucoes.tsx  listaplayers.tsx  listaplayersandclans.tsx  playerlist.tsx  sidebar.tsx
src/components/banlist/: BanListComponent.tsx
src/components/common/: ActionButton.tsx  ActionFormModal.tsx  BaseModal.tsx  DataTable.tsx  ItemSearchModal.tsx  PatentDropdown.tsx  (+4 more)
src/contexts/: ActivityLogContext.tsx  ClanContext.tsx  PlayerContext.tsx  SuccessModalContext.tsx  loadingcontext.tsx
src/hooks/: useAuth.ts  useAutoUpdater.ts  useGMManagement.ts  useGMRole.ts  useModalAction.ts  usePlayerValidation.ts
src/login/: page.tsx  urls.ts
src/main/: page.tsx
src/mock/: auth-test.ts  users.ts
src/services/: api-tauri.service.ts  api.service.ts  auth-real.ts  auth.ts  database.ts  debug.service.ts  tauri-auth.ts  tauri-http.service.ts
src/types/: patent.types.ts
src/utils/: SuccessModalManager.ts  authState.ts  tokenManager.ts  update-diagnostics.ts
(+65 files in other folders)
